@startuml

title __CORE DOMAIN RESPOSTA's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.resposta {
        class com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta {
            - candidatoId : Long
            - curriculoUrl : String
            - id : Long
            - respostasCriterios : List<RespostaCriterio>
            - textContent : String
            - vagaId : Long
            + Resposta()
            + equals()
            + getCandidato()
            + getCandidatoId()
            + getCurriculoUrl()
            + getId()
            + getPerfilResposta()
            + getRespostasCriterios()
            + getTextContent()
            + getVagaId()
            + hashCode()
            + setCandidato()
            + setCandidatoId()
            + setCurriculoUrl()
            + setId()
            + setRespostasCriterios()
            + setTextContent()
            + setVagaId()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.resposta {
        class com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio {
            - criterioId : Long
            - id : Long
            + RespostaCriterio()
            + equals()
            + getCriterioId()
            + getId()
            + getLevel()
            + getVagaCriterio()
            + hashCode()
            + setCriterioId()
            + setId()
            + setLevel()
            + setVagaCriterio()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta o-- com.soundlab.dockerizedjavaapi.core.domain.user.Candidato : candidato
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : level
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio o-- com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio : vagaCriterio


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
